yaml/network-policy/policy-egress-kubectl-ns1.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: egress-nginx
  namespace: ns1
spec:
  podSelector:
    matchLabels:
      app: kubectl
  egress:
  - to:  
    - podSelector:
        matchLabels:
          app: nginx
